# omega-archive

./: CMakeLists.txt  README.md  main.cpp
mylib/: CMakeLists.txt  auth.c  auth.h  omegadb.c  omegadb.h
